# groundwork

./: .env.example  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 0002-llm-senses-deterministic-decides.md  0003-groundwork-distribution.md
groundwork/: __init__.py  claims.py  config.py  gateway.py  trace.py  verification.py
tests/: test_claims.py
